--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: set ssh key
         run: |
           mkdir -p ~/.ssh/
-          echo "${{secrets.WFP_ID_RSA}}" > ~/.ssh/id_rsa
+          echo "${{secrets.TENG_XUN_YUN.WFP_ID_RSA}}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan "122.51.127.235" >> ~/.ssh/known_hosts
 
