--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,14 @@ jobs:
       - name: deploy # 部署
         run: |
           ssh root@122.51.127.235 "
+            echo "${{secrets.TENG_XUN_YUN_FOR_GITHUB_ID_RSA}}" > ~/.ssh/id_rsa
             cd /home/study;
             rm -rf notes;
             git clone git@github.com:fantienan/notes.git
             git checkout main;
             git pull origin main;
             git remote remove origin;
+            rm -rf ~/.ssh/id_rsa
             docker-compose build notes-service; 
             docker-compose up -d;
           "
