--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
             git checkout main;
             git pull origin main;
             git remote remove origin;
+            cd notes
             docker-compose build notes-service; 
             docker-compose up -d;
           "
