--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           ssh root@122.51.127.235 "
             cd /home/study;
             rm -rf notes;
-            git clone https://${{secrets.USERNAMR_FOR_GITHUB}}:${{secrets.PASSWORD_FOR_GITHUB}}@github.com/fantienan/notes.git;
+            git clone https://${{secrets.USERNAME_FOR_GITHUB}}:${{secrets.PASSWORD_FOR_GITHUB}}@github.com/fantienan/notes.git;
             git checkout main;
             git pull origin main;
             git remote remove origin;
